samples/_failures_safe/1761511058_c1b593_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b65343ae.c: In function ‘main’:
./samples/SAFE/__tmp_b65343ae.c:140:12: error: missing terminating " character
  140 |     printf("Supported levels: ERROR, W
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b65343ae.c:140:5: error: expected expression at end of input
  140 |     printf("Supported levels: ERROR, W
      |     ^~~~~~
./samples/SAFE/__tmp_b65343ae.c:140:5: error: expected declaration or statement at end of input
